--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Java
+*.class
+*.jar
+*.log
+
+# C++
+*.o
+*.out
+*.exe
+
+# Helm Charts
+charts/*/templates/*.bak
